@@ -28,6 +28,8 @@
 			</array>
 		</dict>
 	</array>
+    <key>LSUIElement</key>
+    <true/>
 	<key>CFBundleExecutable</key>
 	<string>ScriptExec</string>
 	<key>CFBundleIconFile</key>
